--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "grunt-assets-versioning",
+  "name": "@yoshakasa/grunt-assets-versioning",
   "description": "Versioning static assets with Grunt",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "homepage": "https://github.com/theasta/grunt-assets-versioning",
   "author": {
     "name": "Alexandrine Boissière",
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/theasta/grunt-assets-versioning.git"
+    "url": "git://github.com/Yoshakasa/grunt-assets-versioning.git"
   },
   "bugs": {
     "url": "https://github.com/theasta/grunt-assets-versioning/issues"
@@ -17,24 +17,26 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/theasta/grunt-assets-versioning/blob/master/LICENSE-MIT"
+      "url": "https://github.com/Yoshakasa/grunt-assets-versioning/blob/master/LICENSE-MIT"
     }
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "Gruntfile.js",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 14.0.0"
   },
   "scripts": {
     "test": "grunt test"
   },
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.4.1",
-    "grunt-contrib-concat": "~0.2.0",
-    "grunt-contrib-jshint": "~0.1.1",
-    "grunt-contrib-nodeunit": "~0.1.2",
-    "grunt-jsdoc": "^0.6.1",
-    "mock-fs": "^2.3.1"
+    "grunt": "^1.5.2",
+    "grunt-contrib-clean": "^2.0.1",
+    "grunt-contrib-concat": "^2.1.0",
+    "grunt-contrib-jshint": "^3.2.0",
+    "grunt-jsdoc": "^2.4.1",
+    "mock-fs": "^5.1.2"
   },
   "peerDependencies": {
     "grunt": ">=0.4.0"
@@ -43,8 +45,8 @@
     "gruntplugin"
   ],
   "dependencies": {
-    "lodash": "^2.4.1",
-    "moment": "^2.9.0",
-    "slash": "^1.0.0"
+    "lodash": "^4.17.21",
+    "moment": "^2.29.2",
+    "slash": "^3.0.0"
   }
 }
